--- a/connector.yaml
+++ b/connector.yaml
@@ -1,7 +1,7 @@
 version: "1.0"
 specification:
-  name: "connectorname"
+  name: "foo"
   summary: "<describe your connector>"
   description: "<describe your connector in detail>"
-  version: (devel)
+  version: 54cea26-dirty
   author: "<your name>"
