--- a/connector.yaml
+++ b/connector.yaml
@@ -1,10 +1,10 @@
 version: "1.0"
 specification:
   name: foo
-  summary: <describe your connector>
-  description: <describe your connector in detail>
+  summary: describe your connector
+  description: describe your connector in detail
   version: 54cea26-dirty
-  author: <your name>
+  author: your name
   source:
     parameters:
       - name: foo
