--- a/connector.yaml
+++ b/connector.yaml
@@ -3,7 +3,7 @@ specification:
   name: foo
   summary: describe your connector
   description: describe your connector in detail
-  version: 54cea26-dirty
+  version: v0.3.0
   author: your name
   source:
     parameters:
